// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when filters are not restricted 1`] = `
<div>
  <div
    class="ui-Modal"
  >
    <div
      class="ui-ModalTitle"
    >
      Dashboard filter settings
    </div>
    <div
      class="ui-ModalContent"
    >
      <div
        class="descContainer"
      >
        <span>
          Dashboards can be filtered by dimensions to change
                                         the data shown. By default, all dimensions are available
                                         as filters. Alternatively, only selected dimensions can
                                         be made available on a dashboard.
        </span>
      </div>
      <form>
        <div
          class="radioButton"
        >
          <div
            class="ui-Radio"
            data-checked="true"
            label="Allow filtering by all dimensions"
            name="radio-allow-filtering-on-all"
            value="false"
          />
        </div>
        <div
          class="radioButton"
        >
          <div
            class="ui-Radio"
            data-checked="false"
            label="Only allow filtering by selected dimensions"
            name="radio-restrict-filtering"
            value="true"
          />
        </div>
      </form>
    </div>
    <div
      class="ui-ModalActions"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="ui-Button"
        >
          Cancel
        </div>
        <div
          class="ui-Button"
        >
          Confirm
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when filters are restricted 1`] = `
<div>
  <div
    class="ui-Modal"
  >
    <div
      class="ui-ModalTitle"
    >
      Dashboard filter settings
    </div>
    <div
      class="ui-ModalContent"
    >
      <div
        class="descContainer"
      >
        <span>
          Dashboards can be filtered by dimensions to change
                                         the data shown. By default, all dimensions are available
                                         as filters. Alternatively, only selected dimensions can
                                         be made available on a dashboard.
        </span>
      </div>
      <form>
        <div
          class="radioButton"
        >
          <div
            class="ui-Radio"
            data-checked="false"
            label="Allow filtering by all dimensions"
            name="radio-allow-filtering-on-all"
            value="false"
          />
        </div>
        <div
          class="radioButton"
        >
          <div
            class="ui-Radio"
            data-checked="true"
            label="Only allow filtering by selected dimensions"
            name="radio-restrict-filtering"
            value="true"
          />
        </div>
      </form>
      <div
        class="ui-Transfer"
        options="kvikk lunsj, salt sild, seigmenn"
        selecteddimensions="kl"
      />
    </div>
    <div
      class="ui-ModalActions"
    >
      <div
        class="ui-ButtonStrip"
      >
        <div
          class="ui-Button"
        >
          Cancel
        </div>
        <div
          class="ui-Button"
        >
          Confirm
        </div>
      </div>
    </div>
  </div>
</div>
`;
